--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             height: 450px; /* Taller output areas */
             border: 1px solid #4a5568;
             box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.3); /* Inner shadow for depth */
+            padding-top: 45px; /* Added padding to make space for the button */
         }
         .output-section textarea[disabled] {
             background-color: #1a1f26; /* Even darker for disabled, clearly read-only */
@@ -184,7 +185,7 @@
         /* Copy button specific styles */
         .copy-button {
             position: absolute;
-            top: 20px; /* Adjust as needed for vertical positioning */
+            top: 60px; /* Adjusted position to be inside the textarea, considering h2 height */
             right: 20px; /* Adjust as needed for horizontal positioning */
             padding: 8px 12px;
             background-color: #4a5568; /* Dark grey to stand out from blue */
@@ -411,6 +412,7 @@
             </div>
             <div class="output-column">
                 <h2 class="text-xl lg:text-2xl">English Prompt (Final)</h2>
+                <!-- Moved copy button inside the column and adjusted positioning -->
                 <button id="copyEnglishPrompt" class="copy-button">Copy</button>
                 <textarea id="englishPromptOutput" class="rounded-lg bg-gray-800 text-gray-400 p-3" disabled></textarea>
             </div>
